2008-05-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/highlighting.c, data/filetypes.xml:
   Use Javascript styles for any VBScript and ASP code embedded in a
   HTML file.
   Use Python styles for embedded Python code.
 * src/highlighting.c:
   Remove hotspot code as it was never really used.
 * src/socket.c:
   Iconify the main window on Windows before de-iconifying it when
   opening files remotely to ensure the main window pops up.
 * src/symbols.c:
   Clear a document's symbol list first after it was detached from its
   container to prevent crashes when saving files with collapsed
   symbol list items.


2008-05-10  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/dialogs.c, src/prefs.c:
   Use gtk_window_present() instead of gtk_widget_show() for Open File
   and Preferences dialog.


2008-05-09  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/prefs.c, src/callbacks.c, src/callbacks.h,
   src/keyfile.c, src/document.c, src/document.h, src/editor.c,
   src/editor.h, src/ui_utils.c, geany.glade, TODO, doc/geany.txt,
   doc/geany.html:
   Add basic Line Breaking option in the Document menu. Line breaking
   only works when typing characters past the line breaking column
   number.
   Add 'Line breaking column' editor pref.
 * src/callbacks.c, src/callbacks.h, src/interface.c, src/keyfile.c,
   src/main.c, src/ui_utils.c, geany.glade:
   Rename old uses of line breaking -> line wrapping. This includes the
   keyfile pref, so any users with this enabled will have to reset it.
 * doc/geany.txt, doc/geany.html:
   Update Code Navigation section for build errors and message items.
   Correct Load Tags menu item being in the Tools menu now.
   Document 'Disk check timeout' pref.
 * src/plugindata.h:
   Update api_version for new line breaking struct fields.
 * src/filetypes.c:
   Set filetype::id automatically in filetype_add().
 * src/filetypes.c: