@@ -2884,16 +2884,37 @@ restart Geany after making changes, because they are only read
 at startup.
 
 
-Filetype templates
-^^^^^^^^^^^^^^^^^^
+File templates
+^^^^^^^^^^^^^^
 
-Filetype templates are templates used as the basis of a new file. To
+File templates are templates used as the basis of a new file. To
 use them, choose the *New (with Template)* menu item from the *File*
 menu.
 
-By default, templates are created for some filetypes. Other filetype
+By default, templates are created for some filetypes. Custom file
 templates can be added by creating the appropriate template file and
 restarting Geany. You can also edit the default filetype templates.
+
+The file's contents are just the text to place in the document,
+except for the optional ``{fileheader}`` template wildcard. This can
+be placed anywhere, but is usually on the first line of the file,
+followed by a blank line.
+
+Custom file templates
+`````````````````````
+
+These are read from the ``~/.geany/templates/files`` directory (created
+the first time Geany is started). The filetype to use is detected from
+the template file's extension, if any. For example, creating a file
+``main.c`` would add a menu item which created a new document with the
+filetype set to 'C'.
+
+The template file is read from disk when the corresponding menu item is
+clicked, so you don't need to restart Geany after editing a custom file
+template.
+
+Filetype templates
+``````````````````
 
 Filetype template files are read from the ``~/.geany/templates``
 directory, and are named "filetype." followed by the filetype
@@ -2902,12 +2923,7 @@ unsure about the filetype name extensions, they are the same as
 the filetype configuration file extensions, commonly installed in
 ``/usr/share/geany``, with the prefix "filetypes.".
 
-The file's contents are just the text to place in the document,
-except for the optional ``{fileheader}`` template wildcard. This can
-be placed anywhere, but is usually on the first line of the file,
-followed by a blank line.
-
-There is also a template file ``template.none`` which is used when
+There is also a template file ``filetype.none`` which is used when
 the New command is used without a filetype. This is empty by default.
 
 
